--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,119 @@
-.container{
-  
+:root {
+  --dark-blue: #11175e;
+  --hover: #2d70fd;
+  --green: #00d8a7;
+  --bg: #f5f9ff;
+  --white: #fff;
+  --border: #e6ecf4;
+  --gray: #eeeeee;
+  --dark-gray: #b1bacb;
+}
+html {
+  background-color: var(--bg);
+}
+h1 {
+  font-size: 48px;
+  color: var(--dark-blue);
+}
+
+ul {
+  padding: 0;
+}
+hr {
+  border: 1px solid var(--gray);
+}
+li {
+  list-style-type: none;
+  padding-bottom: 38px;
+}
+.flex {
+  display: flex;
+  justify-content: space-between;
+}
+.main{
+    height: 500px;
+    max-height: 500px;
+    overflow: scroll;
+}
+.container {
+  display: flex;
+  align-items: center ;
+  justify-content: space-around;
+  height: 100vh;
+  flex-direction: column;
+}
+.item {
+  display: flex;
+  align-items: center;
+}
+.add-item {
+  padding: 1em;
+  border-radius: 8px;
+  border: 1px solid var(--gray);
+  width: 560px;
+}
+.add-item::placeholder {
+  color: var(--dark-gray);
+}
+
+
+.card {
+  width: 1000px;
+  display: flex;
+  flex-direction: column;
+  height: 670px;
+  max-height: 670px;
+  background-color: var(--white);
+  border: 1px solid var(--border);
+  border-radius: 32px;
+}
+
+.body {
+  padding: 2em 10em;
+}
+
+.primary-button {
+  background-color: var(--hover);
+  color: var(--white);
+  padding: 1em 2em;
+  border-radius: 4px;
+  border: none;
+  transition: 0.3s ease;
+  cursor: pointer;
+}
+.primary-button:hover {
+  background-color: var(--dark-blue);
+  transition: 0.3s ease;
+}
+.secondary-text {
+  color: var(--dark-gray);
+}
+.secondary-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  color: var(--dark-gray);
+  padding: 0;
+}
+
+input[type="checkbox"]:checked + label.strikethrough {
+  text-decoration: line-through;
+  color: var(--dark-gray);
+}
+input[type="checkbox"]{
+    width: 1.6em;
+    height: 1.6em;
+    background-color: white;
+    border-radius: 50%;
+    vertical-align: middle;
+    border: 1px solid #ddd;
+    appearance: none;
+    -webkit-appearance: none;
+    outline: none;
+    cursor: pointer;
+    margin-right: 1em;
+}
+input[type="checkbox"]:checked{
+    background-color: var(--green);
 }
